New FutureRestore beta naming scheme Code cleanup